--- a/frontend-client/src/App.css
+++ b/frontend-client/src/App.css
@@ -2,6 +2,18 @@ body{
   background-color: #282c34;
   color: white;
 }
+
+.column {
+  float: left;
+  width: 33.33%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 /* 
 .App {
   text-align: center;
